// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcCheckbox > #slots > #error-message - should render error-message slot instead of error-message prop when both are passed 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-checkbox"
>
  <input
    aria-describedby="ec-checkbox-error-1"
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper"
  >
    <span
      class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--error"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <!--v-if-->
    </span>
    <label
      class="ec-checkbox__label"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
    >
      
      
      
    </label>
  </div>
  <div
    class="ec-checkbox__error-text"
    data-test="ec-checkbox__error-text"
    id="ec-checkbox-error-1"
  >
    
    Error message coming from slot
    
  </div>
</div>
`;

exports[`EcCheckbox > #slots > #errorMessage - should render the error message slot if passed 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-checkbox"
>
  <input
    aria-describedby="ec-checkbox-error-1"
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper"
  >
    <span
      class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--error"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <!--v-if-->
    </span>
    <label
      class="ec-checkbox__label"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
    >
      
      
      
    </label>
  </div>
  <div
    class="ec-checkbox__error-text"
    data-test="ec-checkbox__error-text"
    id="ec-checkbox-error-1"
  >
    
    Test error message slot
    
  </div>
</div>
`;

exports[`EcCheckbox > #slots > #label - should render label slot instead of label prop when both are passed 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-checkbox"
>
  <input
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper"
  >
    <span
      class="ec-checkbox__check-icon-wrapper"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <!--v-if-->
    </span>
    <label
      class="ec-checkbox__label"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
    >
      
      Label message coming from slot
      
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCheckbox > #slots > #label - should render the label slot if passed 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-checkbox"
>
  <input
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper"
  >
    <span
      class="ec-checkbox__check-icon-wrapper"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <!--v-if-->
    </span>
    <label
      class="ec-checkbox__label"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
    >
      
      Test label message slot
      
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCheckbox > :props > :disabled - should render the checkbox with a disabled attribute and checked 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-checkbox"
>
  <input
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    disabled=""
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper"
  >
    <span
      class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked ec-checkbox__check-icon-wrapper--disabled ec-checkbox__check-icon-wrapper--checked-and-disabled"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <svg
        class="ec-icon ec-checkbox__check-icon"
        data-test="ec-checkbox__check-icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-check"
        />
      </svg>
    </span>
    <label
      class="ec-checkbox__label"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
    >
      
      
      
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCheckbox > :props > :disabled - should render the checkbox with a disabled attribute and indeterminate 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-checkbox"
>
  <input
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    disabled=""
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper"
  >
    <span
      class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--indeterminate ec-checkbox__check-icon-wrapper--disabled ec-checkbox__check-icon-wrapper--indeterminate-and-disabled"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <span
        class="ec-checkbox__indeterminate-icon"
        data-test="ec-checkbox__indeterminate-icon"
      />
    </span>
    <label
      class="ec-checkbox__label"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
    >
      
      
      
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCheckbox > :props > :disabled - should render the checkbox with a disabled attribute and not checked 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-checkbox"
>
  <input
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    disabled=""
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper"
  >
    <span
      class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--disabled"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <!--v-if-->
    </span>
    <label
      class="ec-checkbox__label"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
    >
      
      
      
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCheckbox > :props > :error-message - should render the checkbox with an error message 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-checkbox"
>
  <input
    aria-describedby="ec-checkbox-error-1"
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper"
  >
    <span
      class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--error"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <!--v-if-->
    </span>
    <label
      class="ec-checkbox__label"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
    >
      
      
      
    </label>
  </div>
  <div
    class="ec-checkbox__error-text"
    data-test="ec-checkbox__error-text"
    id="ec-checkbox-error-1"
  >
    
    Test error message prop
    
  </div>
</div>
`;

exports[`EcCheckbox > :props > :indeterminate - should render even if the checkbox is checked 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-checkbox"
>
  <input
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper"
  >
    <span
      class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked ec-checkbox__check-icon-wrapper--indeterminate"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <span
        class="ec-checkbox__indeterminate-icon"
        data-test="ec-checkbox__indeterminate-icon"
      />
    </span>
    <label
      class="ec-checkbox__label"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
    >
      
      
      
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCheckbox > :props > :indeterminate - should render the checkbox as checked when indeterminate has switched to false > after 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-checkbox"
>
  <input
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper"
  >
    <span
      class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <svg
        class="ec-icon ec-checkbox__check-icon"
        data-test="ec-checkbox__check-icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-check"
        />
      </svg>
    </span>
    <label
      class="ec-checkbox__label"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
    >
      
      
      
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCheckbox > :props > :indeterminate - should render the checkbox as checked when indeterminate has switched to false > before 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-checkbox"
>
  <input
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper"
  >
    <span
      class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked ec-checkbox__check-icon-wrapper--indeterminate"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <span
        class="ec-checkbox__indeterminate-icon"
        data-test="ec-checkbox__indeterminate-icon"
      />
    </span>
    <label
      class="ec-checkbox__label"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
    >
      
      
      
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCheckbox > :props > :indeterminate - should render the checkbox as indeterminate 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-checkbox"
>
  <input
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper"
  >
    <span
      class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--indeterminate"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <span
        class="ec-checkbox__indeterminate-icon"
        data-test="ec-checkbox__indeterminate-icon"
      />
    </span>
    <label
      class="ec-checkbox__label"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
    >
      
      
      
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCheckbox > :props > :isSingleLine - should render the checkbox with in a single line with the label as a title 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-checkbox"
>
  <input
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
  >
    <span
      class="ec-checkbox__check-icon-wrapper"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <!--v-if-->
    </span>
    <label
      class="ec-checkbox__label ec-checkbox__label--is-single-line"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
      title="Test is single line prop"
    >
      
      Test is single line prop
      
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCheckbox > :props > :label - should render the checkbox with a label 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-checkbox"
>
  <input
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper"
  >
    <span
      class="ec-checkbox__check-icon-wrapper"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <!--v-if-->
    </span>
    <label
      class="ec-checkbox__label"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
    >
      
      Test label prop
      
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCheckbox > attrs > should pass all non-prop attributes to the hidden checkbox input 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-checkbox"
>
  <input
    aria-label="Random label"
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper"
  >
    <span
      class="ec-checkbox__check-icon-wrapper"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <!--v-if-->
    </span>
    <label
      class="ec-checkbox__label"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
    >
      
      
      
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCheckbox > attrs > should render with custom attributes 1`] = `
<div
  class="ec-checkbox my-class"
  data-test="my-data-test ec-checkbox"
  style="top: 0px;"
>
  <input
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    role="checkbox"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper"
  >
    <span
      class="ec-checkbox__check-icon-wrapper"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <!--v-if-->
    </span>
    <label
      class="ec-checkbox__label"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
    >
      
      
      
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCheckbox > v-model > should render the input focused when focused > blurred 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-checkbox"
>
  <input
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper"
  >
    <span
      class="ec-checkbox__check-icon-wrapper"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <!--v-if-->
    </span>
    <label
      class="ec-checkbox__label"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
    >
      
      
      
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcCheckbox > v-model > should render the input focused when focused > focused 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-checkbox"
>
  <input
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper"
  >
    <span
      class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--focused"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <!--v-if-->
    </span>
    <label
      class="ec-checkbox__label"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
    >
      
      
      
    </label>
  </div>
  <!--v-if-->
</div>
`;
